/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.nevercase.lllidan.pkg.proto;

// Package-wide variables from generator "generated".
option go_package = "proto";

// Gateway
message Gateway {
  optional string hostname = 1;

  optional string ip = 2;

  optional int32 port = 3;

  optional int32 nodePort = 4;
}

// GatewayList
message GatewayList {
  repeated Gateway items = 1;
}

message KickInfo {
  optional string hostname = 1;

  optional string clientId = 2;

  optional int32 id = 3;
}

// Notification
message Notification {
  repeated int32 ids = 1;

  optional bytes message = 2;
}

message Request {
  optional string serviceApi = 1;

  repeated bytes data = 2;
}

message Response {
  optional string serviceApi = 1;

  optional int32 code = 2;

  optional string message = 3;

  repeated bytes data = 4;
}

// Worker
message Worker {
  optional string hostname = 1;

  optional string ip = 2;

  optional int32 port = 3;

  optional int32 nodePort = 4;
}

// WorkerList
message WorkerList {
  repeated Worker items = 1;
}

